--- a/portfolio.html
+++ b/portfolio.html
@@ -253,10 +253,9 @@
             </a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="index.html#about">About</a></li>
                 <li><a href="portfolio.html">Work</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="admin.html">Admin</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
